Update Controllers , server ,  router and swagger
registerUser
loginUser
logoutUser
getAllUsers (admin)
updateUserRole(admin)
deleteUser(admin)
updatePassword ( user / admin)
